
public class AnimationsParametorsModel
{
    public string horizontal = "horizontal";
    public string vertical = "vertical";
    public string isRuning = "isRuning";
    public string isJumping = "isJumping";
    public string isNormalAttack = "isNormalAttack";
    public string isHeavyAttack = "isHeavyAttack";
    public string isRolling = "isRolling";
}
